*** 0.2.2 ****

	* lib/kde3.cygclass (kde3_compile):
	Add --disable-rpath to configure options.

	* lib/xorg.cygclass:
	Accept package-defined ORIG_PN.

	* lib/xorg.cygclass (xorg_compile):
	Add -DX_LOCALE to CPPFLAGS.

	* Makefile.am,
	  doc/Makefile.am,
	  test/Makefile.am,
	  test/bootstrap:
	Fixed *clean make targets.

	* lib/perl.cygclass (perl_compile):
	Don't pass --prefix /usr to Build.PL after all.

	* README:  Various updates.

	* lib/gst-plugins.cygclass (gst_plugins_autoreconf):
	GStreamer tarballs include autogen.sh, so use it instead.
	Add files generated by autogen.sh to DIFF_EXCLUDES.

	* lib/ruby.cygclass (ruby_compile, ruby_install):
	Accept arguments and pass them to appropriate commands.

	* lib/gst-plugins.cygclass (gst_plugins_autoreconf):
	Use gnome2_autoreconf to avoid breaking po/Makefile.in.in.

	* bin/cygport.in (verbose, cygconf),
	  lib/cvs.cygclass (cvs_unpack),
	  lib/gnome2.cygclass (gnome2_autoreconf),
	  lib/svn.cygclass (svn_unpack):
	New function to print a command before execution, as make does.
	Use throughout.

	* bin/cygport.in (pkg_pkgcheck):
	Only warn where files are missing, as there are cases where that's 
	acceptable, but error if files are duplicated.

	* bin/cygport.in (pkg_diff):
	Ignore intltool.m4, except for within intltool.
	Ignore omf.make and xmldocs.make, except for within gnome-common.

	* lib/xorg.cygclass:
	Don't force WANT_AUTOMAKE.

	* lib/gnome2.cygclass (gnome2_autoreconf):
	Only pass --force to aclocal-1.8/1.9; earlier versions don't accept it.

	* configure.ac:
	Post-release version bump.

*** 0.2.1 ****

	* bin/cygport.in (pkg_pkgcheck):
	New internal function for detecting duplicate and missing files from 
	binary packages.  Patch provided by Reini Urban:
	http://www.cygwin.com/ml/cygwin/2006-06/msg00140.html

	* bin/cygport.in (cygautoreconf):
	Run touch config.h.in if present, since autoheader doesn't if unchanged.

	* lib/kde3.cygclass:
	Support koffice.

	* lib/qt3.cygclass (qt3_qmake):